# picanteo

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py
conf/pipelines/: bitemporal_2D3D_pipeline.yaml  bitemporal_2D_pipeline.yaml
conf/steps/: boolean_maps_merge_conf.yaml  dsm_extraction_conf.yaml  dtm_extraction_conf.yaml  visualization_conf.yaml
conf/steps/filters/: ambiguity_filter_conf.yaml  elevation_filter_conf.yaml  morphologic_filter.yaml  ndvi_filter_conf.yaml  uncertainty_filter_conf.yaml
conf/steps/semantic_segmentation/: basic_inference_config.yaml
docs/tutorials/: data_readiness.md  how_to_create_a_pipeline.ipynb
docs/tutorials/data/: post_event_color2.geom  post_event_img1.geom  pre_event_color1.geom  pre_event_img2.geom
picanteo/: _version.py  main_pipeline.py
picanteo/pipelines/: bitemporal_2d.py  bitemporal_2d_3d.py  picanteo_pipeline.py
picanteo/toolbox/: picanteo_step.py
picanteo/toolbox/data_extraction/_2D/semantic_segmentation/: inference_dataset.py  inference_merger.py  inference_model.py  semantic_segmentation.py
picanteo/toolbox/data_extraction/_3D/: dsm_extraction.py  dtm_extraction.py
picanteo/toolbox/data_filtering/: morphologic_filter.py  picanteo_filtering_step.py  threshold_filter.py
picanteo/toolbox/data_fusion/: __init__.py  boolean_maps_merge.py
picanteo/toolbox/data_visualization/: dashboard.py  map.py  page.py  tab.py  visualize_map.py
picanteo/utils/: config_parser.py  logger.py  utils.py
