# Copyright (c) 2025 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Picanteo
# (see https://github.com/CNES/picanteo).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Picanteo setup configuration file

# package setup main metadata
[metadata]
name = picanteo
author = CNES
author_email = cars@cnes.fr
description = Picanteo: CNES change detection framework for natural disaster response
url = https://github.com/CNES/picanteo
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
license_files = LICENSE
keywords= picanteo, Change detection, Remote Sensing
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Cython

[options]
python_requires = >=3.9

# Picanteo packages dependencies
install_requires =
    cars >= 0.11.0
    segmentation-models-pytorch
    hydra-core
    opencv-python
    panel
    leafmap
    localtileserver
    ipykernel
    ipywidgets_bokeh

packages_dir = =picanteo
packages = find:

[options.packages.find]
where = picanteo

[options.entry_points]
console_scripts =
    picanteo = picanteo.main_pipeline:picanteo_cli
    picanteo_visualize = picanteo.main_pipeline:picanteo_visualize
